# release_manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  license.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  router.js
frontend/src/lib/: status.js
frontend/src/pages/: Dashboard.vue  NewRun.vue  RunDetail.vue  RunsList.vue
release_manager/: api.py  hooks.py  install.py  modules.txt  patches.txt
release_manager/patches/: fix_widget_doctype_filters.py  rename_smoke_doctypes.py
release_manager/public/frontend/: index.html
release_manager/public/frontend/assets/: Dashboard-5a20d4cd.js  Dashboard-5a20d4cd.js.map  Dashboard-62b8fb4c.js  Dashboard-62b8fb4c.js.map  Dashboard-8975b2fc.js  Dashboard-8975b2fc.js.map  Dashboard-a1b1cc13.js  Dashboard-a1b1cc13.js.map  NewRun-3500ce7f.js  NewRun-3500ce7f.js.map  NewRun-38d6c854.js  NewRun-38d6c854.js.map  NewRun-c1c22984.js  NewRun-c1c22984.js.map  NewRun-c399bdc4.js  NewRun-c399bdc4.js.map  RunDetail-3592cbdd.js  RunDetail-3592cbdd.js.map  RunDetail-7a553f19.js  RunDetail-7a553f19.js.map  RunDetail-d57c468f.js  RunDetail-d57c468f.js.map  RunDetail-d6a20928.js  RunDetail-d6a20928.js.map  index-089c2262.css  index-250f9866.js  index-250f9866.js.map  index-3cccd02e.css  index-450f2a1a.css  index-adaa935f.js  index-adaa935f.js.map  index-c0f690ef.js  (+6 more)
release_manager/www/release/: index.html
smoke_console/: api.py  hooks.py  install.py  modules.txt
smoke_console/www/smoke/: index.py
(+75 files in other folders)
