[project]
name = "release_manager"
authors = [
    { name = "Release Manager Contributors", email = "umair_sayyed@yahoo.com" },
]
description = "Control plane (UI) for release_tests — schedule and run release tests against Frappe sites and track results."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # The execution engine. Installed editable from ~/release_tests in dev.
    "release_tests",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "release_manager"
